<resources>
    <string name="app_name">Vehicle Helper</string>
    <string name="phone_number_otp">PHONE_NUMBER</string>
    <string name="giam_ho">Giám hộ</string>
    <string name="theo_doi">Theo dõi</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="phan_hoi">Phản hồi</string>
    <string name="sos">SOS</string>
    <string name="channel_name">Helper App</string>
    <string name="channel_description">Channel DS</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="xin_chao">Xin chào!</string>
    <string name="mat_khau_err">Mật khẩu không hợp lệ</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="thoat_tk">Thoát Tài Khoản</string>
    <string name="quen_mk">Quên mật khẩu</string>
    <string name="non_empty">Vui lòng nhập đầy dủ dữ liệu</string>
    <string name="non_valid_price">Giá dịch vụ phải lớn hơn 0</string>
    <string name="tiep_tuc">TIẾP TỤC</string>
    <string name="doi_sdt">Đổi SĐT</string>
    <string name="gui_lai_otp">Gửi lại OTP</string>
    <string name="otp_err">Mã xác thực không hợp lệ</string>
    <string name="ma_xac_thuc">Mã xác thực</string>
    <string name="title_otp_activity">Nhập mã xác thực 6 số được gửi đến</string>
    <string name="xac_thuc_otp">Xác thực OTP</string>
    <string name="thong_tin_dang_nhap">Thông tin đăng nhập</string>
    <string name="ho_ten">Họ tên</string>
    <string name="mat_khau_6_so">Mật khẩu gồm 6 số</string>
    <string name="hoan_thanh">HOÀN THÀNH</string>
    <string name="them_nguoi_giam_ho">Thêm người giám hộ</string>
    <string name="them">THÊM</string>
    <string name="huy">HỦY</string>
    <string name="dong">Đóng</string>
    <string name="giam_ho_list">DANH SÁCH GIÁM HỘ</string>
    <string name="nhan_de_chon_ngay">Nhấn vào để chọn ngày</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="nhap_day_du_du_lieu">Vui lòng nhập đầy đủ dữ liệu!!!</string>
    <string name="mat_khau_6_ky_tu">Mật khẩu mới phải đủ 6 ký tự!!!</string>
    <string name="trung_mat_khau">Mật khẩu mới không được trùng mật khẩu hiện tại!</string>
    <string name="mat_khau_hien_tai_sai">Mật khẩu hiện tại không đúng!!!</string>
</resources>