<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.security.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="35dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/thong_tin_dang_nhap"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_circle"
            android:backgroundTint="#8BFFC107">

            <View
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_baseline_person_24"
                android:backgroundTint="#FF5722"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/bg_et"
                android:hint="@string/ho_ten"
                android:inputType="textCapCharacters"
                android:maxLength="25"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:textColor="#6C6C6C"
                android:textColorHint="#6C6C6C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/clear_name"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_sharp_add_circle_24"
                android:padding="15dp"
                android:rotation="45"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_circle"
            android:backgroundTint="#8BFFC107">

            <View
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_baseline_lock_24"
                android:backgroundTint="#FF5722"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/bg_et"
                android:hint="@string/mat_khau_6_so"
                android:inputType="number"
                android:maxLength="6"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:textColor="#6C6C6C"
                android:textColorHint="#6C6C6C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/clear_pass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_sharp_add_circle_24"
                android:padding="15dp"
                android:rotation="45"
                android:visibility="invisible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_empty"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/cb_user_type"
            android:textAllCaps="true"
            android:textStyle="italic"
            android:text="Bạn là chủ cừa hàng?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_circle"
            android:backgroundTint="@color/yellow"
            android:text="@string/hoan_thanh"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_change_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:paddingVertical="5dp"
            android:text="@string/doi_sdt"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_pbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#59050505"
        android:gravity="center_horizontal"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@drawable/bg_pbar"
            android:padding="12dp">

            <ProgressBar
                android:layout_width="26dp"
                android:layout_height="26dp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
